--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-vue": "^10.5.1",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
@@ -24,7 +28,7 @@
     "typescript": "^5.3.3"
   },
   "engines": {
-    "node": ">=20.0.0",
+    "node": ">=20.0.0 <21.0.0",
     "pnpm": ">=8.0.0"
   },
   "packageManager": "pnpm@8.12.1"
