fix(ci): 修复 Vercel 部署时 prepare 脚本的 CI 检测逻辑
- 将 CI 检测从严格等于 'true' 改为检查变量是否存在
- 使用 !process.env.CI 逻辑更清晰
- 兼容 Vercel 及其他 CI 环境

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "turbo run test",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
-    "prepare": "node -e \"process.env.CI === 'true' || require('child_process').execSync('husky install', {stdio:'inherit'})\"",
+    "prepare": "node -e \"if (!process.env.CI) require('child_process').execSync('husky install', {stdio:'inherit'})\"",
     "clean": "turbo run clean && rm -rf node_modules"
   },
   "devDependencies": {
