fix(vercel): 使用 pnpm filter 参数构建，避免路径切换
- 改用 pnpm --filter @cosmetics/web run build
- 简化 vercel.json 配置
- 移除不必要的 framework 和 routes 配置

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-  "version": 2,
-  "buildCommand": "turbo run build --filter=@cosmetics/web",
+  "buildCommand": "pnpm --filter @cosmetics/web run build",
   "outputDirectory": "apps/web/dist",
-  "installCommand": "npm install -g pnpm@8.12.1 && pnpm install",
-  "framework": null,
-  "devCommand": null,
-  "routes": [{ "handle": "filesystem" }, { "src": "/.*", "dest": "/index.html" }]
+  "installCommand": "npm install -g pnpm@8.12.1 && pnpm install"
 }
