--- a/apps/server/vercel.json
+++ b/apps/server/vercel.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
-  "name": "cosmetics-api",
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "api/**/*.js",
       "use": "@vercel/node"
     }
   ],
@@ -12,8 +11,5 @@
       "src": "/(.*)",
       "dest": "/api/index.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
