--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,7 +29,8 @@
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "redis": "^4.6.11"
+    "redis": "^4.6.11",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -39,7 +40,6 @@
     "@types/node": "^20.10.5",
     "prisma": "^5.7.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
     "vitest": "^1.0.4"
   }
 }
