fix(server): 增强 vercel-build 脚本调试输出
- 添加详细的构建步骤日志
- 移除 migrate deploy（serverless 环境不需要）
- 使用 npx tsc 确保使用正确的 TypeScript 编译器
- 添加 dist 目录验证

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,7 +10,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc && prisma generate",
     "start": "node dist/index.js",
-    "vercel-build": "prisma migrate deploy && prisma generate && tsc",
+    "vercel-build": "echo 'Starting Vercel build...' && prisma generate && echo 'Prisma generated' && npx tsc --version && echo 'Running TypeScript compiler...' && npx tsc && echo 'Build complete' && ls -la dist/ || echo 'dist folder not found!'",
     "lint": "eslint . --ext .ts --fix --ignore-path ../../.gitignore",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
